--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -6,13 +6,10 @@ hide_table_of_contents: true
 
 <h1 className="pages--h1">About CoNote</h1>
 
-## 🎯 Index
+## Contributions
 
-This is the about page.
+- phith0n: <https://github.com/phith0n>
 
-<div className="comment--translc_gray">
-  📦 This is a comment
-  <a href="https://github.com/phith0n/conote2" title="Github Page">
-    Here
-  </a>。
-</div>
+## Contact Us
+
+- Email: <root@leavesongs.com>
