--- a/i18n/zh-Hans/docusaurus-theme-classic/footer.json
+++ b/i18n/zh-Hans/docusaurus-theme-classic/footer.json
@@ -29,7 +29,7 @@
   },
   "link.item.label.Github": {
     "message": "Github",
-    "description": "The label of footer link with label=Github linking to https://github.com"
+    "description": "The label of footer link with label=Github linking to https://github.com/phith0n"
   },
   "link.item.label.Contact us": {
     "message": "Contact us",
@@ -42,5 +42,21 @@
   "copyright": {
     "message": "Copyright © 2017 - 2024 Powered by CoNote",
     "description": "The footer copyright"
+  },
+  "link.title.CoNote legacy": {
+    "message": "CoNote legacy",
+    "description": "The title of the footer links column with title=CoNote legacy in the footer"
+  },
+  "link.title.Related phith0n": {
+    "message": "Related phith0n",
+    "description": "The title of the footer links column with title=Related phith0n in the footer"
+  },
+  "link.item.label.CoNote 1.0": {
+    "message": "CoNote 1.0",
+    "description": "The label of footer link with label=CoNote 1.0 linking to https://phithon.gitbooks.io/conote/content/"
+  },
+  "link.item.label.Preview video": {
+    "message": "Preview video",
+    "description": "The label of footer link with label=Preview video linking to https://www.youtube.com/watch?v=WqbjJ8NISys"
   }
 }
