upgrade docusaurus to 3.x && fixed scss issue

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -8,8 +8,8 @@ hide_table_of_contents: true
 
 ## Contributions
 
-- phith0n: <https://github.com/phith0n>
+- phith0n: [https://github.com/phith0n](https://github.com/phith0n)
 
 ## Contact Us
 
-- Email: <root@leavesongs.com>
+- Email: [root@leavesongs.com](mailto:root@leavesongs.com)
