--- a/docs/self-hosted/introduce.mdx
+++ b/docs/self-hosted/introduce.mdx
@@ -1,7 +1,11 @@
 ---
-title: 自建CoNote服务器
+title: 私有化部署
 sidebar_position: 10
 description: Self-hosted CoNote server
 ---
 
-CoNote 支持自建服务器，本文档介绍如何自建 CoNote 服务器。
+import PricingTable from "@site/src/components/pricingTable";
+
+CoNote 支持自建服务器进行私有化部署，本文档介绍如何在自己的服务器上搭建 CoNote 。
+
+<PricingTable />
