feat: allow to generate config on page

--- a/i18n/zh-Hans/docusaurus-plugin-content-docs/current/self-hosted/generate.mdx
+++ b/i18n/zh-Hans/docusaurus-plugin-content-docs/current/self-hosted/generate.mdx
@@ -8,7 +8,7 @@ import ConfigGenerate from "@site/src/components/configGenerate";
 
 :::info
 
-这个小工具可以辅助生成docker-compose.yaml和config.yaml配置文件，下载后解压放在任意目录下，即可直接执行`docker compose up -d`启动CoNote服务。
+这个小工具可以辅助生成docker-compose.yaml和config.yaml配置文件，下载或放置在任意目录下，即可直接执行`docker compose up -d`启动CoNote服务。
 
 :::
 
